# exatools-zeepreactorr

./: LICENSE  README.md  app (bof1).py  app.py  exatool.py  main.py  pyproject.toml  requirements.txt
FRANK/: DOI_trash.txt  Results.txt  Searched_material.txt
